<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="app_name">AELOCR</string>
	<string name="brightness">Brightness</string>
	<string name="contrast">Contrast</string>
	<string name="undo">Undo</string>
	<string name="reset">Reset</string>
	<string name="ocr_ready">OCR Ready</string>
	<string name="redo">Redo</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="bright_cont">Brightness\nContrast</string>
	<string name="rotate">Rotate</string>
	<string name="crop">Crop</string>
	<string name="title_activity_bitmap_effect">BitmapEffectActivity</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="save">Save</string>
	
	
	 <string name="none">None</string>
    <string name="autofix">Autofix</string>
    <string name="bw">Min/Max Color Intensity</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="crossprocess">Cross Process</string>
    <string name="documentary">Documentary</string>
    <string name="duotone">Duo Tone</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fish Eye</string>
    <string name="flipvert">Flip Vertical</string>
    <string name="fliphor">Flip Horizontal</string>
    <string name="grain">Grain</string>
    <string name="grayscale">Grayscale</string>
    <string name="lomoish">Lomoish</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="rotate">Rotate</string>
    <string name="saturate">Saturate</string>
    <string name="sepia">Sepia</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
</resources>