<LinearLayout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/edit_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	android:weightSum="12" >
	<RelativeLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="10" >
		<ImageView
			android:id="@+id/imgView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scaleType="matrix" />
		<LinearLayout
			android:id="@+id/rotateLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="10" >
			<ImageButton
				android:id="@+id/rotateCounterClockwise"
				android:layout_width="0dp"
				android:layout_height="35dp"
				android:layout_weight="1"
				android:background="@android:color/white"
				android:contentDescription="@string/minus"
				android:onClick="adjustRotation"
				android:src="@drawable/minus" />
			<SeekBar
				android:id="@+id/rotateSeekbar"
				android:layout_width="0dp"
				android:layout_height="35dp"
				android:layout_weight="8"
				android:background="@android:color/transparent"
				android:max="360"
				android:progress="180" />
			<ImageButton
				android:id="@+id/rotateClockwise"
				android:layout_width="0dp"
				android:layout_height="35dp"
				android:layout_weight="1"
				android:background="@android:color/white"
				android:contentDescription="@string/plus"
				android:onClick="adjustRotation"
				android:src="@drawable/plus" />
		</LinearLayout>
	</RelativeLayout>
	<LinearLayout
		android:id="@+id/briConLayout"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:visibility="gone" >
		<LinearLayout
			android:id="@+id/brightnessLinearLayout"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical" >
			<ImageButton
				android:id="@+id/increaseBrightness"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:background="@android:color/white"
				android:contentDescription="@string/plus"
				android:onClick="adjustBrightness"
				android:src="@drawable/plus" />
			<com.ael.celloscope.aelcelloscopeocr.mediaeffects.VerticalSeekBar
				android:id="@+id/brightnessSeekbar"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_gravity="center_horizontal"
				android:layout_weight="1"
				android:max="255" />
			<ImageButton
				android:id="@+id/decreaseBrightness"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:background="@android:color/white"
				android:contentDescription="@string/minus"
				android:onClick="adjustBrightness"
				android:src="@drawable/minus" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/contrastLinearLayout"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical" >
			<ImageButton
				android:id="@+id/increaseContrast"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:background="@android:color/white"
				android:contentDescription="@string/plus"
				android:onClick="adjustContrast"
				android:src="@drawable/plus" />
			<com.ael.celloscope.aelcelloscopeocr.mediaeffects.VerticalSeekBar
				android:id="@+id/contrastSeekbar"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_gravity="center_horizontal"
				android:layout_weight="1"
				android:max="255" />
			<ImageButton
				android:id="@+id/decreaseContrast"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:background="@android:color/white"
				android:contentDescription="@string/minus"
				android:onClick="adjustContrast"
				android:src="@drawable/minus" />
		</LinearLayout>
	</LinearLayout>
	<RadioGroup
		android:id="@+id/radioGroup"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="center|end"
		android:orientation="vertical" >
		<RadioButton
			android:id="@+id/radio_rotate"
			style="@android:style/Widget.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/rotate" />
		<RadioButton
			android:id="@+id/radio_bright_cont"
			style="@android:style/Widget.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/bright_cont" />
		<RadioButton
			android:id="@+id/radio_save"
			style="@android:style/Widget.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/save" />
		<RadioButton
			android:id="@+id/radio_reset"
			style="@android:style/Widget.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/reset" />
	</RadioGroup>
</LinearLayout>